Layout lower fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,18 @@
 <resources>
     <string name="app_name">CS3270A3 RJensen</string>
 
-    <string name="my_pick">My Pick</string>
     <string name="btn_rock">Rock</string>
     <string name="btn_paper">Paper</string>
     <string name="btn_scissors">Scissors</string>
+    <string name="reset_counts">Reset Counts</string>
+    <string name="toast_message">"Clearing Variables"</string>
+
+    <string name="title">Rock, Paper, Scissors</string>
+    <string name="author">By Ron Jensen</string>
+    <string name="my_pick">My Pick</string>
+    <string name="phone_pick_is">Phone Pick is</string>
+    <string name="games_played">Games Played</string>
+    <string name="phone_win_count">Phone Win Count</string>
+    <string name="my_win_count">My Win Count</string>
+    <string name="tie_games">Tie Games</string>
 </resources>
